<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/itSearch"
        android:title="@string/title_search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="always"
        android:visible="false"
        />
    <item
        android:id="@+id/itGiohang"
        android:title="@string/title_giohang"
        android:icon="@drawable/ic_shopping_cart_white_24dp"
        app:showAsAction="always"
        app:actionLayout="@layout/custom_item_giohang"

        />
    <item android:id="@+id/more"
        android:title="@string/title_Menu"
        android:icon="@drawable/ic_more_vert_white_24dp"
        app:showAsAction="always"

        >
        <menu>
            <item
                android:id="@+id/itDangNhap"
                android:title="@string/title_itDangNhap"
                android:icon="@drawable/ic_sentiment_satisfied_black_24dp"
                />

            <item
                android:id="@+id/itThongBao"
                android:title="@string/title_itThongBao"
                android:icon="@drawable/ic_notifications_none_black_24dp"
                />

            <item
                android:id="@+id/itDanhSachMongMuon"
                android:title="@string/title_itMongMuon"
                android:icon="@drawable/ic_favorite_border_black_24dp"
                />



            <item
                android:id="@+id/itDonHangCuaToi"
                android:title="@string/title_itDonHangCuaToi"
                android:icon="@drawable/ic_content_paste_black_24dp"
                />

            <item
                android:id="@+id/itCaiDat"
                android:title="@string/title_itCaiDat"
                android:icon="@drawable/ic_settings_black_24dp"
                />

            <item
                android:id="@+id/itChinhSach"
                android:title="@string/title_itChinhSach"
                android:icon="@drawable/ic_event_note_black_24dp"
                />

            <item
                android:id="@+id/itTroGiup"
                android:title="@string/title_itTroGiup"
                android:icon="@drawable/ic_help_outline_black_24dp"
                />

            <item
                android:id="@+id/itDangXuat"
                android:title="@string/title_itDangXuat"
                android:icon="@drawable/ic_logout"
                android:visible="false"
                />
        </menu>
    </item>



</menu>